# Ai

./: .env  pyproject.toml  readme.md
01_fastapi/: 02_routing_groups.py  04_file_handling.py
02_dataBases/fast_api_postgress/: .env  main.py
02_dataBases/fast_api_postgress/alembic/: env.py
02_dataBases/fast_api_postgress/config/: database.py
02_dataBases/fast_api_postgress/validations/: validation.py
02_fast_api/: 03_middelware.py  04_file_handling.py  readme.md
02_fastapi/: 01_routing_basic.py
03_data_preprocessing/: 01_numpy.md  01_numpy.py  02_pandas.md  02_pandas.py  03_opencv.md  03_opencv.py  my_numpy.py  output.csv  output.json
03_data_preprocessing/04_model_development/: readme.md
04_model_development/: readme.md
05_llm/01_llm_basic/: 02_gemini_strem.py
06_agents/: Agents.ipynb
07_esign_patterns/: 01_prompt_chaining.py
TodoApp/: .env  ai_tools.py  app.py  db.py  models.py  openai_client.py  server.py  todo.py
TodoApp/agents/: agent.py
dataBases/: .env  fastapi_mongoDb.py  pyproject.toml
dataBases/fast_api_postgress/: .env  alembic.ini  main.py  readme.md
dataBases/fast_api_postgress/alembic/versions/: 0903a5c03fa4_create_todos_table.py  733c749542b3_create_todos_table.py
dataBases/fast_api_postgress/config/: database.py
dataBases/fast_api_postgress/models/: todo_model.py
dataBases/fast_api_postgress/routes/: todo_routes.py  user_routes.py
dataBases/fast_api_postgress/utils/: auth_utils.py
